--- a/vercel.json
+++ b/vercel.json
@@ -3,23 +3,7 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
-    },
-    {
-      "source": "/(.*\\.(js|css|svg|png|jpg|jpeg|gif|ico|webp|woff|woff2|ttf|eot))",
-      "destination": "/$1"
-    },
-    {
-      "source": "/(manifest.json|robots.txt|sitemap.xml|_redirects)",
-      "destination": "/$1"
-    },
-    {
-      "source": "/(.*)",
+      "source": "/([^.]+(?:/[^.]+)*)$",
       "destination": "/index.html"
     }
   ],
