fix: Exclude manifest.json from SPA rewrite to prevent 401

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
+      "source": "/manifest.json",
+      "destination": "/manifest.json"
+    },
+    {
       "source": "/([^.]+(?:/[^.]+)*)$",
       "destination": "/index.html"
     }
