fix: Simplify SPA rewrite to match only paths without file extensions

--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,7 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/manifest.json",
-      "destination": "/manifest.json"
-    },
-    {
-      "source": "/([^.]+(?:/[^.]+)*)$",
+      "source": "/(?!.*\\.)(.*)",
       "destination": "/index.html"
     }
   ],
