--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,14 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/([^.]+(?:/[^.]+)*)$",
-      "destination": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html",
+      "has": [
+        {
+          "type": "file",
+          "value": false
+        }
+      ]
     }
   ],
   "headers": [
