fix: Use simple catch-all rewrite for SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.html",
-      "has": [
-        {
-          "type": "file",
-          "value": false
-        }
-      ]
+      "destination": "/index.html"
     }
   ],
   "headers": [
