--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/(?!.*\\.)(?!_next)(.+)",
       "destination": "/index.html"
     }
   ],
