--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/(?!.*\\.)(?!_next)(.+)",
+      "source": "/(?!manifest\\.json|robots\\.txt|sitemap\\.xml|favicon|assets|_next)(?!.*\\.)(.+)",
       "destination": "/index.html"
     }
   ],
