fix: Replace invalid regex rewrite pattern with simple path-based rewrites
- Vercel doesn't support complex negative lookahead regex patterns
- Changed to explicit path-based rewrites:
  - manifest.json, robots.txt, sitemap.xml pass through
  - /assets/* pass through
  - Everything else → /index.html (SPA routing)

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,23 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/(?!manifest\\.json|robots\\.txt|sitemap\\.xml|favicon|assets|_next)(?!.*\\.)(.+)",
+      "source": "/manifest.json",
+      "destination": "/manifest.json"
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "/robots.txt"
+    },
+    {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml"
+    },
+    {
+      "source": "/assets/:path*",
+      "destination": "/assets/:path*"
+    },
+    {
+      "source": "/:path*",
       "destination": "/index.html"
     }
   ],
